Fix broken styles from merge

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -1032,14 +1032,12 @@ a {
   background: $form-background;
   border: 1px solid $form-border-color;
 
-  &.h5peditor-form-manager {
-    > .tree,
-    > .common,
-    > .field {
-      max-width: 918px;
-      margin: 20px auto;
-      padding: 0 20px;
-    }
+  > .tree,
+  > .common,
+  > .field {
+    max-width: 918px;
+    margin: 20px auto;
+    padding: 0 20px;
   }
 
   &.h5peditor-semi-fullscreen {
